--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                         <span class="text-avatar">A</span> 个人中心
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="">基本资料</a></dd>
-                        <dd><a href="">更换头像</a></dd>
-                        <dd><a href="">重置密码</a></dd>
+                        <dd><a href="./user/user_info.html" target="fm">基本资料</a></dd>
+                        <dd><a href="./user/user_avatar.html" target="fm">更换头像</a></dd>
+                        <dd><a href="./user/user_pwd.html" target="fm">重置密码</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item"><a href="javascript:;" id="btnLogout"><span class="iconfont icon-tuichu"></span>退出</a></li>
@@ -57,34 +57,34 @@
                     <li class="layui-nav-item">
                         <a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;">基本资料</a></dd>
-                            <dd><a href="javascript:;">更换头像</a></dd>
-                            <dd><a href="javascript:;">更换密码</a></dd>
+                            <dd><a href="./user/user_info.html" target="fm">基本资料</a></dd>
+                            <dd><a href="./user/user_avatar.html" target="fm">更换头像</a></dd>
+                            <dd><a href="./user/user_pwd.html " target="fm">重置密码</a></dd>
                         </dl>
                     </li>
                 </ul>
             </div>
         </div>
 
-        <div class="layui-body">
+        <div class="layui-body ">
             <!-- 内容主体区域 -->
             <iframe src="./home/dashboard.html" name="fm" frameborder="0"></iframe>
         </div>
 
-        <div class="layui-footer">
+        <div class="layui-footer ">
             <!-- 底部固定区域 -->
             © layui.com - 底部固定区域
         </div>
     </div>
 
     <!-- 导入 layui 的JS文件 -->
-    <script src="/assets/lib/layui/layui.all.js"></script>
+    <script src="/assets/lib/layui/layui.all.js "></script>
     <!-- 导入 JQuery -->
-    <script src="./assets/lib/jquery.js"></script>
+    <script src="./assets/lib/jquery.js "></script>
     <!-- 导入自己封装的 baseAPI -->
-    <script src="./assets/js/baseAPI.js"></script>
+    <script src="./assets/js/baseAPI.js "></script>
     <!-- 导入 index.js -->
-    <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/index.js "></script>
 </body>
 
 </html>
